ADAPT-5453 - fix for IE11 blurry text when flipped

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -140,6 +140,7 @@
       &.flipcard-item-front,
       &.flipcard-item-back {
         [class*='version-11'].ie & {
+          transform: none;
           transition: 0;
         }
       }
